package at.fhj.msd.swdesign.exercise.snack;

public interface ISnackbar {

    void makePizza();

    void makeBurger();

    void makeSandwich();
}
